kubernetes/manifests/security-tools/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-tools-network-policy
  namespace: security-tools
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: security-tools
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: security-tools
    - to: {}
      ports:
        - port: 443
        - port: 80
